# host-rescue

./: README.md  pyproject.toml  requirements.txt
axentx_product/: __init__.py
business/: breakeven.md  business-model-canvas.md  customer-journey.md  dataflow.md  marketing-plan.md  partner-targets.md  tech-spec.md  user-stories.md
docs/: BMC.md  PRD.md  ROADMAP.md
src/: ci_cd_pipeline.py  host_rescue.py  iac_generator.py  migration_report.py
tests/: test_ci_cd_pipeline.py  test_host_rescue.py  test_iac_generator.py  test_migration_report.py  test_reverse_string.py
